[metadata]
name = ghidra_diff_engine
author = clearbluejar
author_email = clearbluejar
version = attr:ghidra_diff_engine.__version__
description = A self-contained binary diffing base class designed to leverage the power of Ghidra and its FlatProgramAPI.
long_description_content_type = text/markdown
long_description = file:README.md
license = GPL-3.0 license
license_files =
    LICENSE    
url = https://github.com/clearbluejar/ghidra-diff-engine
keywords = patchdiff, binaries, bindiff, ghidra
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pyhidra
    mdutils

[tool:pytest]
testpaths = tests
addopts =
    -p no:faulthandler