[metadata]
name = ghidriff
author = clearbluejar
author_email = clearbluejar@clearbluejar.com
version = attr:ghidriff.__version__
description = Ghidra Binary Diffing Engine
long_description_content_type = text/markdown
long_description = file:README.md
license = GPL-3.0 license
license_files =
    LICENSE    
url = https://github.com/clearbluejar/ghidriff
keywords = patchdiff, binaries, bindiff, ghidra, ghidriff
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pyhidra
    mdutils

[options.entry_points]
console_scripts =
    ghidriff = ghidriff.__main__:main

[options.extras_require]
testing =
    pytest    
    requests
    pytest-datadir
    pytest-forked
    pytest-xdist

[tool:pytest]
testpaths = tests
required_plugins =
    pytest-datadir

addopts =
    -p no:faulthandler

[pycodestyle]
max_line_length = 130